# rc-autonomous-car

./: README.md
f1_10_sim/race/launch/: f1_tenth.launch
f1_10_sim/race/scripts/: FTG_scratch.py  control.py  levineDemo.py  sim_connector.py
ros_pololu_servo/: CMakeLists.txt
ros_pololu_servo/launch/: HARE_control.launch  TBD_pololu_ctrl.launch  hare_command_config.xml  hare_ctrl_cfg.yaml  hare_pololu_config.xml  pololu_motors.yaml
ros_pololu_servo/msg/: TBD_drive_cmds.msg
ros_pololu_servo/scripts/: TBD_pololu_cmd.py  command_pub.py
ros_pololu_servo/src/ros_pololu_servo/: PololuController.cpp
rplidar_ros/scripts/: rplidar_scan_viz.py
rs_custom_wrapper/: CMakeLists.txt  package.xml
rs_custom_wrapper/include/rs_custom_wrapper/: rs_custom_wrapper.h
rs_custom_wrapper/json/: D415_RemoveIR.json  DefaultPreset_D415.json  DefaultPreset_D435.json
rs_custom_wrapper/launch/: hare_full.launch  hare_rs_config.xml  rs.launch  rs_notworking.launch
rs_custom_wrapper/src/: color_rs_wrapper.cpp  rs_custom_wrapper.cpp
tbd_joystick_demo/: CMakeLists.txt  package.xml
tbd_joystick_demo/launch/: tbd_joystick.launch
tbd_joystick_demo/src/: tbd_joystick_listener.py
tbd_main/: CMakeLists.txt  package.xml
tbd_main/launch/: tbd_main.launch
tbd_main/src/: chuck_cars_in_gaps.py  live_viz_gaps.py  tbd_drive_at_deepest_cntrl.py  test_gap_find.py
tbd_main/src/FTGdev/: kmeans_gap_finder.py
tbd_main/src/UtilityScripts/: tbd_save_scans.py  tbd_save_videos.py
tbd_sim/tbd_description/: CMakeLists.txt  package.xml
tbd_sim/tbd_description/meshes/: eccr_noisy_track.stl  eccr_track.stl  mini_track.stl  smooth_circle_track.stl  wack_track.stl
tbd_sim/tbd_gazebo/: CMakeLists.txt  package.xml
tbd_sim/tbd_gazebo/launch/: tbd_sim.launch
tbd_sim/tbd_gazebo/worlds/: track_eccr-lefts.world  track_eccr-rights.world  track_eccr.world  track_eccr_noisy.world  track_mini.world  track_smooth_circle.world  track_wack.world
tbd_sim/tbd_race/: CMakeLists.txt  package.xml
tbd_sim/tbd_race/launch/: tbd_basement.launch
(+10 files in other folders)
